[feat] Added possibility to filter events for roads to a given date.
